# ants-detection

./: .gitignore  LICENSE  README.md
dataset/: .gitignore  Base.xcconfig  CMakeLists.txt  LICENSE  README.md
dataset/Dataset/: DatasetGenerator.cpp  DatasetGenerator.hpp  main.cpp
dataset/Dataset.xcodeproj/: project.pbxproj
dataset/Test/: DatasetGeneratorTest.cpp  DatasetGeneratorTest.mm
inferenz/: .gitignore  README.md
inferenz/coreml/: Base.xcconfig  README.md
inferenz/coreml/Detect.xcodeproj/: project.pbxproj
inferenz/coreml/Detect.xcodeproj/xcshareddata/xcschemes/: Detector.xcscheme
inferenz/coreml/Detector/: Detector.hpp  Detector.mm  main.mm
inferenz/pytorch/: README.md  ameisen_export.py  ameisen_live.py
